--- a/src/assets/styles/components/_svg-icons.scss
+++ b/src/assets/styles/components/_svg-icons.scss
@@ -61,7 +61,7 @@
       $types: (
         primary: var(--grey-50),
         secondary: var(--grey-400),
-        tertiary: var(--grey-500),
+        tertiary: var(--grey-300),
         disabled: var(--grey-400),
         selected: var(--brand-300),
         inverse: var(--grey-900),
@@ -72,6 +72,12 @@
         danger: var(--red-400),
         discovery: var(--purple-500),
       );
+
+      @each $key, $value in $types {
+        &-#{$key} path {
+          fill: $value;
+        }
+      }
     }
   }
 
